crates/nrz/tests/snapshots/query__nrz_trace_get_`incorrect_extension.mjs`_with_dependencies_(npm@10.5.0).snap
---
source: crates/nrz/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "incorrect_extension.mjs",
      "dependencies": {
        "files": {
          "items": [
            {
              "path": "bar.js"
            }
          ]
        }
      }
    }
  }
}
