crates/nrz/tests/snapshots/query__nrz_trace_get_`with_prefix.ts`_with_dependencies_(npm@10.5.0).snap
---
source: crates/nrz/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "with_prefix.ts",
      "dependencies": {
        "files": {
          "items": [
            {
              "path": "bar.js"
            },
            {
              "path": "foo.js"
            }
          ]
        }
      }
    }
  }
}
