crates/nrz/tests/snapshots/query__oxc_repro_get_dependencies_(npm@10.5.0).snap
---
source: crates/nrz/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "index.js",
      "dependencies": {
        "files": {
          "items": [
            {
              "path": "nm/index.js"
            }
          ]
        },
        "errors": {
          "items": []
        }
      }
    }
  }
}
